--- a/header.html
+++ b/header.html
@@ -1,7 +1,7 @@
 <div id="menu-bar">
   <h1>Header</h1>
   <ul>
-    <li><a href=''>Home</a></li>
-    <li><a href=''>List Items</a></li>
+    <li><a href='#/home'>Home</a></li>
+    <li><a href='#/directory'>List Items</a></li>
   </ul>
 </div>
