--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <title>TheNetNinja Angular Playlist</title>
     <script src="./app/lib/angular.min.js"></script>
+    <script src="app/lib/angular-animate.min.js"></script>
     <script src="app/app.js"></script>
+    <script src="./app/lib/angular-route.min.js"></script>
     <link href="content/css/styles.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
@@ -32,19 +34,6 @@
 
     <!-- including common files  -->
     <header ng-include="'header.html'"></header>
-    <div class="content">
-      <div ng-controller='newctrl'>
-        <button ng-click="order = 'name'">Order by name</button>
-        <button ng-click="order = 'belt'">Order by belt</button>
-        <p> <input type="text" ng-model="search" placeholder='Search'></p>
-        <ul> 
-          <li ng-repeat="x in obj | orderBy:order| filter:search" ng-show="x.avaliable">
-              <h3>{{x.name }} : {{x.rate | currency}} </h3>
-          <div class="remove" ng-click="remove(x)">x</div>
-          <span class="belt" style="color:black" >{{x.belt}}</span>
-        </li>
-        </ul>
-      </div>
-    </div>
+    <main ng-view></main>
   </body>
 </html>
